--- a/javascript-calculator/src/App.css
+++ b/javascript-calculator/src/App.css
@@ -5,10 +5,11 @@ button{
   font-size: 20px;
   border: none;
   color: white;
+  box-shadow: 2px 2px 1px #242424;
 }
 
 button:active{
-  background-color: black;
+  background-color: #242424;
   transition: 50ms ease-in-out;
 }
 
